--- a/src/assets/styles/event-details/_eventdetails.scss
+++ b/src/assets/styles/event-details/_eventdetails.scss
@@ -19,6 +19,10 @@ body {
   overscroll-behavior: none;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 .product_left,
 .product_filter {
   background-color: #211e32;
