--- a/src/assets/styles/header/header.scss
+++ b/src/assets/styles/header/header.scss
@@ -719,6 +719,7 @@ margin-right: 4px;
 }
 
 .mobile-search-static {
+  display: none !important;
   transition: all .3s;
   transform: translateX(150%);
 }
